--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
                 android:text="@string/article_text" />
 
             <Button
+                android:id="@+id/commentButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/add_comment"
